; Copyright (c) Facebook, Inc. and its affiliates.
;
; This source code is licensed under the MIT license found in the
; LICENSE file in the root directory of this source tree.

(library
 (name Backend)
 (public_name infer.Backend)
 (flags
  (:standard -open Core -open IStdlib -open IStd -open OpenSource -open
    ATDGenerated -open IBase -open IR -open Absint -open Biabduction -open BO
    -open Nullsafe -open Pulselib -open Checkers -open Costlib -open Quandary
    -open Topllib -open Concurrency -open Labs -open Dotnet -open Datalog))
 (libraries core memtrace ocamlgraph IStdlib ATDGenerated IBase IR Absint
   Biabduction Nullsafe BO Checkers Costlib Quandary Topllib Concurrency Labs
   Dotnet Datalog)
 (preprocess
  (pps ppx_compare ppx_fields_conv ppx_yojson_conv)))

(documentation
 (package infer)
 (mld_files Backend))
