; Copyright (c) Facebook, Inc. and its affiliates.
;
; This source code is licensed under the MIT license found in the
; LICENSE file in the root directory of this source tree.

(library
 (name IBase)
 (public_name infer.IBase)
 (flags
  (:standard -open Core -open IStdlib -open IStd -open ATDGenerated -open
    OpenSource))
 (libraries cmdliner core memtrace mtime.clock.os parmap re sqlite3 zip
   ATDGenerated IStdlib OpenSource)
 (preprocess
  (pps ppx_blob ppx_compare ppx_enumerate))
 (preprocessor_deps
  (glob_files ../../documentation/checkers/*.md)
  (glob_files ../../documentation/issues/*.md)))

(documentation
 (package infer)
 (mld_files IBase))
