; Copyright (c) Facebook, Inc. and its affiliates.
;
; This source code is licensed under the MIT license found in the
; LICENSE file in the root directory of this source tree.

(library
 (name bo)
 (public_name infer.bo)
 (flags
  (:standard -open Core -open OpenSource -open InferIR -open InferStdlib -open IStd -open InferGenerated
    -open InferBase -open Absint -open Biabduction))
 (libraries base64 core InferStdlib InferGenerated InferBase InferIR absint biabduction)
 (preprocess (pps ppx_compare))
)
