; Copyright (c) Facebook, Inc. and its affiliates.
;
; This source code is licensed under the MIT license found in the
; LICENSE file in the root directory of this source tree.

(library
 (name BO)
 (public_name infer.BO)
 (flags
  (:standard
   -open
   Core
   -open
   OpenSource
   -open
   IR
   -open
   IStdlib
   -open
   IStd
   -open
   ATDGenerated
   -open
   IBase
   -open
   Absint))
 (libraries base64 core IStdlib ATDGenerated IBase IR Absint)
 (preprocess
  (pps ppx_compare inferppx)))
